[package]
name = "strafe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
colored = "2"
inquire = "0.6"
strum = { version = "0.25", features = ["derive"] }
vault = { version = "9", features = ["raw"] }
